--- a/src/assets/styles/components/place.scss
+++ b/src/assets/styles/components/place.scss
@@ -1,13 +1,6 @@
 .place {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.52),
-      rgba(255, 255, 255, 0.97)
-    ),
-    url("/source/assets/images/doctor1.svg");
-  background-size: cover;
-  background-position: 20% top;
-  padding: 50px 0;
+  background: transparent;
+  padding: 20px 0;
   text-align: center;
 
   @include breakpoint($sm) {
@@ -16,7 +9,6 @@
 
   &__content {
     background: #ffffffb0;
-    box-shadow: 0px 2px 12px 0px rgba(60, 60, 60, 0.18);
     max-width: 290px;
     margin: 0 auto;
     border-radius: 3px;
@@ -55,7 +47,8 @@
   }
 
   &__schedule {
-    background: rgba(224, 220, 220, 0.2);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
     margin: 20px auto;
     width: 90%;
   }
